--- a/configs/hydra/dataset_loader/common.yaml
+++ b/configs/hydra/dataset_loader/common.yaml
@@ -5,6 +5,7 @@ valid_start_date: 2021-11-10 10:30:00
 valid_end_date: 2023-01-16 10:30:00
 features: Date, open, High, Low, close, volume #make sure to have Date High Low
 indicators_names: rsi macd
+prediction_window: 1
 
 
 #short_wma, wma, long_wma, ewma, tema, macd, stoch1, stoch2, wpr, rsi_experts, rsi, srsi, bolinger_up,
